--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Testlio",
   "license": "ISC",
   "peerDependencies": {
     "eslint": ">=3"
